# CineReserve_API

./: .coveragerc  .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  dockerfile  pyproject.toml  requirements.txt
cinereserve_api/: manage.py  pyproject.toml
cinereserve_api/accounts/: urls.py  validators.py
cinereserve_api/accounts/serializers/: __init__.py  registerserializer.py
cinereserve_api/accounts/tests/: auth_tests.py  test_auth.py
cinereserve_api/accounts/views/: __init__.py  register_view.py
cinereserve_api/api/: admin.py  models.py  serializers.py  signals.py  tasks.py  throttles.py  urls.py  views.py
cinereserve_api/api/scripts/: populate.py  population.py
cinereserve_api/api/serializers/: __init__.py  base_serializers.py  registerserializer.py  sessionserializers.py
cinereserve_api/api/tests/: test_movies.py  test_register.py  test_seats.py  test_sessions.py
cinereserve_api/api/views/: __init__.py  movieviews.py  registeruserview.py  sessionviews.py
cinereserve_api/booking/: admin.py  models.py  serializers.py  tests.py  throttles.py  urls.py  views.py
cinereserve_api/booking/serializers/: BookingSerializer.py  TicketSerializer.py
cinereserve_api/booking/tests/: test_booking.py  test_tickets.py
cinereserve_api/booking/views/: __init__.py  bookingviews.py  ticketsviews.py
cinereserve_api/cinema/: tasks.py  throttles.py  urls.py  validators.py
cinereserve_api/cinema/scripts/: populate.py
cinereserve_api/cinema/serializers/: __init__.py  base_serializers.py  movieserializers.py  registerserializer.py  sessionserializers.py
cinereserve_api/cinema/tests/: test_auth.py  (+3 more)
cinereserve_api/cinereserve_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
cinereserve_api/payments/: models.py  urls.py  views.py
cinereserve_api/tickets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+12 files in other folders)
